Stability Improvements